--- a/src/app/components/store-card/store-card.component.html
+++ b/src/app/components/store-card/store-card.component.html
@@ -1,11 +1,12 @@
 <a
-  class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow-sm md:flex-row md:max-w-screen-xl hover:bg-gray-100"
+  class="grid grid-cols-2 items-center bg-white border border-gray-200 rounded-lg shadow-sm md:flex-row md:max-w-screen-xl hover:bg-gray-100"
 >
   <img
-    class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
+    class="object-cover w-full rounded-t-lg h-196 md:h-auto md:w-68 md:rounded-none md:rounded-s-lg"
     src="./assets/img/u55.png"
     alt=""
   />
+
   <div class="flex flex-col justify-between p-4 leading-normal">
     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">
       Tiendas asociadas a tynbiz
