--- a/src/app/components/store-card/store-card.component.html
+++ b/src/app/components/store-card/store-card.component.html
@@ -1,17 +1,13 @@
 <a
-  class="grid grid-cols-2 items-center bg-white border border-gray-200 rounded-lg shadow-sm md:flex-row md:max-w-screen-xl hover:bg-gray-100"
+  class="grid md:grid-cols-2 items-center bg-white border border-gray-200 rounded-lg shadow-sm md:flex-row md:max-w-screen-xl "
 >
-  <img
-    class="object-cover w-full rounded-t-lg h-196 md:h-auto md:w-68 md:rounded-none md:rounded-s-lg"
-    src="./assets/img/u55.png"
-    alt=""
-  />
+
 
   <div class="flex flex-col justify-between p-4 leading-normal">
     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">
       Tiendas asociadas a tynbiz
     </h5>
-    <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+    <p class="mb-3 font-normal text-gray-700">
       Encuentra en tynbiz todas las tiendas virtuales de diferentes categorias
       <br />
       Los usuarios que acceden a cualquier tienda virtual asociado a tynbiz,
@@ -22,8 +18,15 @@
       Cantidad <br />
       +300
     </h5>
-    <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+    <p class="mb-3 font-normal text-gray-700">
       Tiendas virtuales asociados
     </p>
+  </div>
+  <div class="flex items-center justify-center bg-purple-100 h-full">
+     <img
+    class="object-cover w-full rounded-t-lg md:h-auto md:w-68 md:rounded-none md:rounded-s-lg"
+    src="./assets/img/u55.png"
+    alt=""
+  />
   </div>
 </a>
