--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="pt-20 px-45 bg-neutral-300">
-  <div>
-    <h2 class="font-bold text-2xl">Compra los productos con sala tynbiz</h2>
+<div class=" p-10 lg:pt-20 lg:px-45  bg-purple-200 dark:bg-gray-800">
+  <div class="dark:text-white">
+    <h2 class="font-bold text-2xl ">Compra los productos con sala tynbiz</h2>
     <p>
       En la sala tynbiz interactua con amigos, familiares o con el vendedor
       directamente para una compra mas decidida
