--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,17 +3,17 @@
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
     <a
-      href="https://flowbite.com/"
+      href="#"
       class="flex items-center space-x-3 rtl:space-x-reverse"
     >
       <img
-        src="https://flowbite.com/docs/images/logo.svg"
+        src="./assets/svg/IsotipoTynbiz.svg"
         class="h-8"
         alt="Flowbite Logo"
       />
       <span
         class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-        >Flowbite</span
+        >Tynbiz</span
       >
     </a>
     <div
