--- a/src/app/shared/side-menu/side-menu.component.html
+++ b/src/app/shared/side-menu/side-menu.component.html
@@ -7,7 +7,7 @@
 >
   <span class="sr-only">Open sidebar</span>
   <svg
-    class="w-6 h-6"
+    class="w-6 h-6 "
     aria-hidden="true"
     fill="currentColor"
     viewBox="0 0 20 20"
@@ -26,17 +26,14 @@
   class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
   aria-label="Sidebar"
 >
-  <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800">
-    <a href="https://flowbite.com/" class="flex items-center ps-2.5 mb-5">
+  <div class="h-full px-3 py-4 overflow-y-auto bg-purple-100 dark:bg-gray-950 " >
+    <a href="#" class="flex items-center ps-2.5 mb-5 ">
       <img
-        src="https://flowbite.com/docs/images/logo.svg"
+        src="./assets/svg/ImagotipoTynbiz.svg"
         class="h-6 me-3 sm:h-7"
-        alt="Flowbite Logo"
+        alt="Tynbiz Logo"
       />
-      <span
-        class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
-        >TYNBIZ</span
-      >
+
     </a>
     <ul class="space-y-2 font-medium">
       @for (menu of menuItems; track menu.name) {
