--- a/src/app/shared/side-menu/side-menu.component.html
+++ b/src/app/shared/side-menu/side-menu.component.html
@@ -7,7 +7,7 @@
 >
   <span class="sr-only">Open sidebar</span>
   <svg
-    class="w-6 h-6 "
+    class="w-6 h-6"
     aria-hidden="true"
     fill="currentColor"
     viewBox="0 0 20 20"
@@ -26,19 +26,19 @@
   class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
   aria-label="Sidebar"
 >
-  <div class="h-full px-3 py-4 overflow-y-auto bg-purple-100 dark:bg-gray-950 " >
-    <a href="#" class="flex items-center ps-2.5 mb-5 ">
+  <div class="h-full px-3 py-4 overflow-y-auto bg-purple-100 dark:bg-gray-950">
+    <a href="#" class="flex items-center ps-2.5 mb-5">
       <img
         src="./assets/svg/ImagotipoTynbiz.svg"
         class="h-6 me-3 sm:h-7"
         alt="Tynbiz Logo"
       />
-
     </a>
     <ul class="space-y-2 font-medium">
       @for (menu of menuItems; track menu.name) {
       <li>
         <a
+          [routerLink]="menu.route"
           class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
         >
           <i [class]="menu.icon"></i>
