--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,10 +2,7 @@
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
-    <a
-      href="#"
-      class="flex items-center space-x-3 rtl:space-x-reverse"
-    >
+    <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img
         src="./assets/svg/IsotipoTynbiz.svg"
         class="h-8"
@@ -30,7 +27,7 @@
         <span class="sr-only">Open user menu</span>
         <img
           class="w-8 h-8 rounded-full"
-          src="/docs/images/people/profile-picture-3.jpg"
+          src="./assets/img/user.jpeg"
           alt="user photo"
         />
       </button>
