--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -38,39 +38,24 @@
       >
         <div class="px-4 py-3">
           <span class="block text-sm text-gray-900 dark:text-white"
-            >Bonnie Green</span
+            >Deminth Sanches</span
           >
           <span class="block text-sm text-gray-500 truncate dark:text-gray-400"
-            >name.com</span
+            >wmarcian071131&#79;gmail.com</span
           >
         </div>
         <ul class="py-2" aria-labelledby="user-menu-button">
           <li>
             <a
-              href="#"
+              [routerLink]="['/account']"
               class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
-              >Dashboard</a
+              >Gestionar Cuenta</a
             >
           </li>
           <li>
             <a
-              href="#"
               class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
-              >Settings</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
-              >Earnings</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
-              >Sign out</a
+              >Cerrar sesión</a
             >
           </li>
         </ul>
