--- a/src/app/pages/account/security-privacity/security-privacity.component.html
+++ b/src/app/pages/account/security-privacity/security-privacity.component.html
@@ -1,1 +1,28 @@
-<p>security-privacity works!</p>,
+<div class="p-6 lg:pt-20 lg:px-20 bg-purple-200 dark:bg-gray-800">
+  <h3 class="font-bold text-3xl m-3">Configuraciones de cuenta</h3>
+
+  <div
+    class="bg-white dark:bg-gray-900 p-4 rounded-lg mb-4 grid grid-cols-12 gap-4"
+  >
+    <div class="col-span-10">
+      <h3 class="font-bold text-2xl">Cambiar contraseña</h3>
+      <p>
+        Crea una nueva contraseña de acceso para mantener la seguridad de tu
+        cuenta de la tienda en Guiby
+      </p>
+    </div>
+    <i class="fa-solid fa-chevron-right col-span-2 m-auto cursor-pointer"></i>
+  </div>
+  <div
+    class="bg-white dark:bg-gray-900 p-4 rounded-lg mb-4 grid grid-cols-12 gap-4"
+  >
+    <div class="col-span-10">
+      <h3 class="font-bold text-2xl">Verificacion en dos pasos</h3>
+      <p>
+        Agregar una capa de seguridad. Solicitar un código de verificación
+        además de la contraseña.
+      </p>
+    </div>
+    <i class="fa-solid fa-chevron-right col-span-2 m-auto cursor-pointer"></i>
+  </div>
+</div>
