feat: componentes accont

--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -19,7 +19,7 @@
         >Contraseña actual</label
       >
       <input
-        type="text"
+        type="password"
         id="oldPassword"
         formControlName="oldPassword"
         class="border text-sm rounded-lg dark:bg-gray-700 block w-full p-2.5 focus:border-purple-800"
@@ -49,7 +49,7 @@
         >Nueva contraseña</label
       >
       <input
-        type="text"
+        type="password"
         id="newPassword"
         formControlName="newPassword"
         class="border text-sm rounded-lg dark:bg-gray-700 block w-full p-2.5 focus:border-purple-800"
@@ -80,7 +80,7 @@
         >Vuelve a escribir la contraseña</label
       >
       <input
-        type="text"
+        type="password"
         id="newPasswordRepit"
         formControlName="newPasswordRepit"
         class="border text-sm rounded-lg dark:bg-gray-700 block w-full p-2.5 focus:border-purple-800"
