--- a/src/app/pages/account/security-privacity/security-privacity.component.html
+++ b/src/app/pages/account/security-privacity/security-privacity.component.html
@@ -1,4 +1,4 @@
-<div class="p-6 lg:pt-20 lg:px-20 bg-purple-200 dark:bg-gray-800">
+<div class="p-6 lg:pt-20 lg:px-20 bg-purple-200 dark:bg-gray-800 w-1/2 m-auto">
   <h3 class="font-bold text-3xl m-3">Configuraciones de cuenta</h3>
 
   <div
