--- a/src/app/components/offer-card/offer-card.component.html
+++ b/src/app/components/offer-card/offer-card.component.html
@@ -1,5 +1,5 @@
 <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
-  @for (listOffer of listOffer(); track listOffer.title) {
+  @for (listOffer of listOffer(); track listOffer.id) {
   <a class="block  p-6 bg-white border border-gray-200 rounded-lg shadow-sm  dark:bg-gray-800 dark:border-gray-700">
     <div class="flex items-center justify-between mb-4">
       <div>
