--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,6 +8,6 @@
     <div class="my-2 w-full h-64 bg-neutral-500"></div>
   </div>
   <div class="mt-6">
-    <tyn-store-card [listCard]="cardStore" />
+    <tyn-info-card [listCard]="cardInfo" />
   </div>
 </div>
