--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -52,13 +52,15 @@
         id="floating_standard"
         #textSearch
         class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-purple-500 focus:outline-none focus:ring-0 focus:border-purple-600 peer"
-        placeholder=" "
+        placeholder="Buscar... "
         formControlName="name"
-        (keyup.enter)="addChips(textSearch.value)"
+        autofocus="true"
+        (keyup.enter)="addChips()"
       />
 
       <button
         type="submit"
+        (click)="addChips()"
         class="text-white absolute end-2.5 bottom-2.5 bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800"
       >
         Buscar
