--- a/src/app/pages/stores/stores.component.html
+++ b/src/app/pages/stores/stores.component.html
@@ -3,7 +3,7 @@
     <h2 class="font-bold text-2xl">Tiendas</h2>
     <p>Todas las tiendas virtuales asociados que esta usando Tynbiz</p>
   </div>
-  <tyn-search />
+  <tyn-search (valueSearch)="valueSearch($event)" />
   <div class="mt-6">
     <tyn-stores-card [listStores]="cardStores"></tyn-stores-card>
   </div>
