--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -2,8 +2,9 @@
 <button
   data-modal-target="static-modal"
   data-modal-toggle="static-modal"
-  class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
   type="button"
+  (click)="openModal()"
 >
   Toggle modal
 </button>
@@ -14,7 +15,8 @@
   data-modal-backdrop="static"
   tabindex="-1"
   aria-hidden="true"
-  class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full"
+  class="overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full"
+  [ngClass]="isModalOpen() ? 'block' : 'hidden'"
 >
   <div class="relative p-4 w-full max-w-2xl max-h-full">
     <!-- Modal content -->
@@ -23,11 +25,20 @@
       <div
         class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600 border-gray-200"
       >
-        <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-          Static modal
-        </h3>
+        <a class="flex items-center space-x-3 rtl:space-x-reverse">
+          <img
+            src="./assets/svg/IsotipoTynbiz.svg"
+            class="h-8"
+            alt="Flowbite Logo"
+          />
+          <span
+            class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+            >Tynbiz</span
+          >
+        </a>
         <button
           type="button"
+          (click)="closeModal()"
           class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
           data-modal-hide="static-modal"
         >
@@ -51,17 +62,10 @@
       </div>
       <!-- Modal body -->
       <div class="p-4 md:p-5 space-y-4">
-        <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-          With less than a month to go before the European Union enacts new
-          consumer privacy laws for its citizens, companies around the world are
-          updating their terms of service agreements to comply.
-        </p>
-        <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-          The European Union’s General Data Protection Regulation (G.D.P.R.)
-          goes into effect on May 25 and is meant to ensure a common set of data
-          rights in the European Union. It requires organizations to notify
-          users as soon as possible of high-risk data breaches that could
-          personally affect them.
+        <h4 class="font-bold text-2xl text-center">Iniciar sesión</h4>
+        <p>
+          Ingresa a Tynbiz y interactua con amigos, familiares o con el vendedor
+          directamente en tus compras
         </p>
       </div>
       <!-- Modal footer -->
@@ -71,6 +75,7 @@
         <button
           data-modal-hide="static-modal"
           type="button"
+          (click)="closeModal()"
           class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         >
           I accept
@@ -78,6 +83,7 @@
         <button
           data-modal-hide="static-modal"
           type="button"
+          (click)="closeModal()"
           class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
         >
           Decline
