--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -60,12 +60,160 @@
 
       <button
         type="submit"
-        (click)="addChips()"
-        class="text-white absolute end-2.5 bottom-2.5 bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800"
+        (click)="openModal()"
+        data-modal-target="default-modal"
+        data-modal-toggle="default-modal"
+        class="text-white absolute block end-2.5 bottom-2.5 bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800"
       >
         Buscar
       </button>
     </div>
   </form>
   <div class="relative z-0"></div>
+</div>
+
+<!-- Main modal -->
+<div
+  id="default-modal"
+  data-modal-backdrop="static"
+  tabindex="-1"
+  aria-hidden="true"
+  class="overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full"
+  [ngClass]="isModalOpen() ? 'block' : 'hidden'"
+>
+  <div class="relative p-4 w-full max-w-2xl max-h-full">
+    <!-- Modal content -->
+    <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
+      <!-- Modal header -->
+      <div
+        class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600 border-gray-200"
+      >
+        <div class="contain-content">
+          <h3 class="text-xl font-bold text-gray-900 dark:text-white">
+            Elije la categoría
+          </h3>
+          <p>Todas las categorías de tiendas virtuales</p>
+        </div>
+        <button
+          type="button"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+          data-modal-hide="default-modal"
+          (click)="closeModal()"
+        >
+          <svg
+            class="w-3 h-3"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 14 14"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+            />
+          </svg>
+          <span class="sr-only">Close modal</span>
+        </button>
+      </div>
+      <!-- Modal body -->
+      <div class="p-4 md:p-5 space-y-4">
+        <label
+          for="countries"
+          class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+          >Departamento</label
+        >
+        <select
+          id="countries"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+        >
+          <option selected>Selecciona...</option>
+          @for (dep of theApartament; track dep.id_ubigeo) {
+          <option value="{{ dep.id_ubigeo }}">{{ dep.nombre_ubigeo }}</option>
+          }
+        </select>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+          <div>
+            <label
+              for="cities"
+              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+              >Provincia</label
+            >
+            <select
+              id="cities"
+              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            >
+              <option selected>Selecciona...</option>
+              @for (dep of theApartament; track dep.id_ubigeo) {
+              <option value="{{ dep.id_ubigeo }}">
+                {{ dep.nombre_ubigeo }}
+              </option>
+              }
+            </select>
+          </div>
+          <div>
+            <label
+              for="districts"
+              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+              >Distrito</label
+            >
+            <select
+              id="districts"
+              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            >
+              <option selected>Selecciona...</option>
+              @for (dep of theApartament; track dep.id_ubigeo) {
+              <option value="{{ dep.id_ubigeo }}">
+                {{ dep.nombre_ubigeo }}
+              </option>
+              }
+            </select>
+          </div>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+          @for (category of categorys; track category.id) {
+          <div
+            class="grid grid-cols-12 border rounded-xl w-full py-5"
+            [ngClass]="{
+              'border-red-800 dark:border-gray-500 border-2':
+                category.state === true,
+              'border-white dark:border-black border-2':
+                category.state === false
+            }"
+            (click)="selectCategory(category)"
+          >
+            <div class="pl-10 col-span-10">
+              <p class="text-2xl font-semibold">{{ category.nombre }}</p>
+              <p class="text-2xs">{{ category.cant }} tiendas</p>
+            </div>
+            <i class="fa fa-house col-span-2 m-auto"></i>
+          </div>
+          }
+        </div>
+      </div>
+      <!-- Modal footer -->
+      <div
+        class="flex items-center p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600"
+      >
+        <button
+          data-modal-hide="default-modal"
+          type="button"
+          (click)="selectCategoryData()"
+          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        >
+          Aceptar
+        </button>
+        <button
+          data-modal-hide="default-modal"
+          type="button"
+          class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+        >
+          Salir
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
